Purpose: add hl fortran
Description:

Solution:

Platforms tested:
linux (absfot and pgf90)
solaris (32 and 64 bit)
AIX

note : HP gives a compiling error , to be fixed in the future

Misc. update:

--- a/hl/src/Makefile.in
+++ b/hl/src/Makefile.in
@@ -10,7 +10,7 @@ srcdir=@srcdir@
 @COMMENCE@
 
 ## Add `-I.' to the C preprocessor flags.
-CPPFLAGS=-I. -I$(srcdir) -I$(top_builddir)/src -I$(top_srcdir)/src  -I$(top_srcdir)/tools/lib @CPPFLAGS@
+CPPFLAGS=-I. -I$(srcdir) -I$(top_builddir)/src -I$(top_srcdir)/src  -I$(top_srcdir)/hl/src @CPPFLAGS@
 
 ## This is our main target, but also remove the settings file when cleaning.
 LIB=libhdf5_hl.la
