--- a/trunk/configure.in
+++ b/trunk/configure.in
@@ -2820,6 +2820,8 @@ dnl Check if they would like the High Level library  compiled
 dnl
 
 AC_SUBST(HL) HL=""
+# name of fortran folder inside "hl", if FORTRAN compile is requested
+AC_SUBST(HL_FOR) HL_FOR=""
 AC_MSG_CHECKING([if high level library is enabled])
 AC_ARG_ENABLE([hl],
               [AC_HELP_STRING([--enable-hl],
@@ -2916,14 +2918,24 @@ if test "X$HDF_CXX" = "Xyes"; then
 fi
 
 # conditionally generate the high level makefiles
-# to do : fortran with hl
-
 if test "X$HDF5_HL" = "Xyes"; then
  HL_FILES="hl/Makefile
            hl/src/Makefile
            hl/test/Makefile"
 fi
 
+# with FORTRAN support
+if test "X$HDF5_HL" = "Xyes" &&  test "X$HDF_FORTRAN" = "Xyes"; then
+ HL_FILES="hl/Makefile
+	   hl/src/Makefile
+	   hl/test/Makefile
+	   hl/fortran/Makefile
+	   hl/fortran/src/Makefile
+	   hl/fortran/test/Makefile"
+# name of folder inside "hl"
+HL_FOR="fortran"	   
+fi
+		       
 
 
 AC_CONFIG_FILES([src/libhdf5.settings
