--- a/trunk/hl/Makefile.in
+++ b/trunk/hl/Makefile.in
@@ -14,7 +14,7 @@ srcdir=@srcdir@
 
 
 # Subdirectories in build-order
-SUBDIRS=src test 
+SUBDIRS=src test @HL_FOR@
 
 ##############################################################################
 ##		    T A R G E T S
