Purpose:     Bug fix
Description:
    Add @COMMENCE@ to makefile, so that all our predefined macros are included,
which makes 'make distclean' work

Platforms tested:
    FreeBSD 4.10 (sleipnir)
    Too minor to require h5committest

--- a/hl/Makefile.in
+++ b/hl/Makefile.in
@@ -11,6 +11,7 @@
 top_srcdir=@top_srcdir@
 top_builddir=..
 srcdir=@srcdir@
+@COMMENCE@
 
 
 # Subdirectories in build-order
@@ -88,7 +89,7 @@ distclean:
 	@@SETX@; for d in $(SUBDIRS); do		                      \
 	   (cd $$d && $(MAKE) $@);					      \
 	done
-	-$(RM)  Makefile
+	-$(RM) Makefile
 
 maintainer-clean:
 	@echo "This target is intended for maintainers to use;"
