--- a/trunk/src/Makefile.in
+++ b/trunk/src/Makefile.in
@@ -67,15 +67,14 @@ PUB_HDR=H5public.h H5Apublic.h H5ACpublic.h H5Bpublic.h H5Cpublic.h           \
 
 ## Other header files (not to be installed)...
 PRIVATE_HDR=H5private.h H5Aprivate.h H5Apkg.h H5ACprivate.h H5Bprivate.h      \
-        H5Cprivate.h H5Dprivate.h H5Edefin.h H5Einit.h H5Eprivate.h H5Eterm.h \
-	H5Fprivate.h H5FDprivate.h H5FLprivate.h H5FOprivate.h H5FPprivate.h  \
-	H5FSprivate.h H5Gprivate.h H5Gpkg.h H5HGprivate.h H5HGpkg.h           \
-	H5HLprivate.h H5HLpkg.h H5HPprivate.h H5Iprivate.h H5MFprivate.h      \
-	H5MMprivate.h H5Oprivate.h H5Opkg.h H5Pprivate.h H5Ppkg.h             \
-	H5Rprivate.h H5RCprivate.h H5RSprivate.h H5Sprivate.h H5SLprivate.h   \
-        H5STprivate.h                                                         \
-        H5Tprivate.h H5TBprivate.h H5Tpkg.h H5TSprivate.h H5Vprivate.h        \
-        H5Zprivate.h H5Zpkg.h H5config.h
+        H5Cprivate.h H5Cpkg.h H5Dprivate.h H5Edefin.h H5Einit.h H5Eprivate.h  \
+        H5Eterm.h H5Fprivate.h H5FDprivate.h H5FLprivate.h H5FOprivate.h      \
+        H5FPprivate.h   H5FSprivate.h H5Gprivate.h H5Gpkg.h H5HGprivate.h     \
+        H5HGpkg.h H5HLprivate.h H5HLpkg.h H5HPprivate.h H5Iprivate.h          \
+        H5MFprivate.h H5MMprivate.h H5Oprivate.h H5Opkg.h H5Pprivate.h        \
+        H5Ppkg.h H5Rprivate.h H5RCprivate.h H5RSprivate.h H5Sprivate.h        \
+        H5SLprivate.h H5STprivate.h H5Tprivate.h H5TBprivate.h H5Tpkg.h       \
+	H5TSprivate.h H5Vprivate.h H5Zprivate.h H5Zpkg.h H5config.h
 
 ## Error header generation
 ##
