--- a/branches/hdf5_1_6/configure.in
+++ b/branches/hdf5_1_6/configure.in
@@ -2367,7 +2367,7 @@ AC_SUBST(HL) HL=""
 AC_MSG_CHECKING([if high level library is enabled])
 AC_ARG_ENABLE([hl],
      [AC_HELP_STRING([--enable-hl],
-                     [Do not compile the high level library [default=yes]])],
+                     [Enable the high level library [default=yes]])],
      [HDF5_HL=$enableval],
      [HDF5_HL=yes])
 
