--- a/src/H5config.h.in
+++ b/src/H5config.h.in
@@ -516,6 +516,10 @@
 /* Define to 1 if you have the ANSI C header files. */
 #undef STDC_HEADERS
 
+/* Define if your system can accurately convert between long double and
+   integer values. */
+#undef SW_LDOUBLE_TO_INT_WORKS
+
 /* Define if your system can accurately convert unsigned long long values to
    floating-point values. */
 #undef SW_ULONG_TO_FP_BOTTOM_BIT_WORKS
