--- a/src/H5config.h.in
+++ b/src/H5config.h.in
@@ -42,6 +42,9 @@
 /* Define if support for Fletcher32 checksum is enabled */
 #undef HAVE_FILTER_FLETCHER32
 
+/* Define if support for nbit filter is enabled */
+#undef HAVE_FILTER_NBIT
+
 /* Define if support for shuffle filter is enabled */
 #undef HAVE_FILTER_SHUFFLE
 
@@ -515,10 +518,6 @@
 
 /* Define to 1 if you have the ANSI C header files. */
 #undef STDC_HEADERS
-
-/* Define if your system can accurately convert between long double and
-   integer values. */
-#undef SW_LDOUBLE_TO_INT_WORKS
 
 /* Define if your system can accurately convert unsigned long long values to
    floating-point values. */
