--- a/trunk/src/Makefile.in
+++ b/trunk/src/Makefile.in
@@ -48,7 +48,7 @@ LIB_SRC=H5.c H5A.c H5AC.c H5B.c H5C.c H5D.c H5Dcontig.c H5Dcompact.c H5Defl.c \
         H5Tfixed.c H5Tfloat.c H5Tinit.c H5Tnative.c H5Toffset.c H5Topaque.c   \
         H5Torder.c H5Tpad.c H5Tprecis.c H5Tstrpad.c H5Tvlen.c H5TB.c H5TS.c   \
         H5V.c H5Z.c H5Zdeflate.c H5Zfletcher32.c H5Zshuffle.c H5Zszip.c       \
-        H5Ztrans.c
+        H5Znbit.c H5Ztrans.c
 
 LIB_OBJ=$(LIB_SRC:.c=.lo)
 
