--- a/configure.in
+++ b/configure.in
@@ -249,6 +249,7 @@ if test "X$HDF_FORTRAN" = "Xyes"; then
   dnl
   AC_SUBST([R_LARGE])
   AC_SUBST([R_INTEGER])
+  AC_SUBST([HADDR_T])
   AC_SUBST([HSIZE_T])
   AC_SUBST([HSSIZE_T])
   AC_SUBST([HID_T])
