--- a/fortran/configure.in
+++ b/fortran/configure.in
@@ -56,6 +56,7 @@ dnl HDF5 integer variables for the H5fortran_types.f90 file.
 dnl
 AC_SUBST(R_LARGE)
 AC_SUBST(R_INTEGER)
+AC_SUBST(HADDR_T)
 AC_SUBST(HSIZE_T)
 AC_SUBST(HSSIZE_T)
 AC_SUBST(HID_T)
