--- a/fortran/test/Makefile.in
+++ b/fortran/test/Makefile.in
@@ -44,7 +44,7 @@ FORTLIBTEST_CSRC = t.c
 FORTLIBTEST_OBJ=$(FORTLIBTEST_FSRC:.f90=.lo) $(FORTLIBTEST_CSRC:.c=.lo)
 
 TEST_OBJ=$(FORTLIBTEST_OBJ) $(TEST_PROGS_SRC:.f90=.lo)
-
+PUB_LIB=
 ## Temporary files
 MOSTLYCLEAN=*.h5 *.tmp
 
