Purpose: Bug fix
Description: libh5test_fortran.a(la) files were installed by
             make install

Solution: Figure out why C test library is not installed and used the
          same trick.

Platforms tested: eirene, mir (too minor for h5committest)

Misc. update:

--- a/branches/hdf5_1_6/fortran/test/Makefile.in
+++ b/branches/hdf5_1_6/fortran/test/Makefile.in
@@ -44,7 +44,7 @@ FORTLIBTEST_CSRC = t.c
 FORTLIBTEST_OBJ=$(FORTLIBTEST_FSRC:.f90=.lo) $(FORTLIBTEST_CSRC:.c=.lo)
 
 TEST_OBJ=$(FORTLIBTEST_OBJ) $(TEST_PROGS_SRC:.f90=.lo)
-
+PUB_LIB=
 ## Temporary files
 MOSTLYCLEAN=*.h5 *.tmp
 
