Purpose: Bug fix
Description: Confiure generated libhdf5.settings files in fortran/src
             and c++/src directories. File in the fortran/src directory
             was not installed; file in the c++/src directory was intalled
             As a result, libhdf5.settings from the src directory with the
             C settings and configuration summary was blown away.
             Also some temporary files were not cleaned in c++ directories.

Solution: Modifed configure.in files to create
          fortran/src/libhdf5_fortran.settings and
          c++/src/libhdf5_cpp.settings files
          Ran autoconf on eirene to generate new configure files.
          Modified Makefile.in files to install *setting files.

          Note: I don't like the solution since *setting files are messy
          and libhdf5_cpp.settings lacks some information (there is no
          corresponding *.in file in the c++/src directory). Since we
          are moving to 1.8 anyway, I don't want to spend too much time
          on it, but we definitely should look carefully at those files
          and check that they are ok in 1.8.



Platforms tested: eirene, cobalt, arabica

Misc. update:

--- a/branches/hdf5_1_6/c++/config/conclude.in
+++ b/branches/hdf5_1_6/c++/config/conclude.in
@@ -72,8 +72,8 @@ install: $(PUB_LIB) $(PUB_HDR) $(PUB_PROGS) $(libdir) $(includedir) $(bindir)
 	      ($(LT_INSTALL_LIB) $$f $(libdir)/. || exit 1);		      \
 	   fi;								      \
 	done
-	@if test -f libhdf5.settings; then				      \
-	   (set -x; $(INSTALL_DATA) libhdf5.settings $(libdir)/. || exit 1);  \
+	@if test -f libhdf5_cpp.settings; then				      \
+	   (set -x; $(INSTALL_DATA) libhdf5_cpp.settings $(libdir)/. || exit 1);  \
 	fi
 	@for f in X $(PUB_HDR); do					      \
 	   if test $$f != X; then					      \
@@ -105,7 +105,7 @@ uninstall-examples:
 
 ## Removes those things that `make install' (would have) installed.
 uninstall:
-	@for f in libhdf5.settings $(LIB); do				      \
+	@for f in libhdf5_cpp.settings $(LIB); do				      \
             $(LT_UNINSTALL) $(libdir)/$$f;				      \
 	done
 	@if test -n "$(PUB_HDR)"; then   				      \
