Purpose: Bug fix
Description: Makefile.in didn't define search path for
             the fortran module directories. This became necessary
             after I removed ../src flag from the acsite.m4
             file and AC_F9X_MOD macro.

Solution: Fixed the Makefile.in

Platforms tested: sol in parallel mode.

Misc. update:

--- a/branches/hdf5_1_6/fortran/testpar/Makefile.in
+++ b/branches/hdf5_1_6/fortran/testpar/Makefile.in
@@ -28,6 +28,7 @@ LIBFORTRAN=../src/libhdf5_fortran.la
 LIBHDF5=$(hdf5_builddir)/libhdf5.la
 FTLIB = ../test/libh5test_fortran.la
 CTLIB = ../../test/.libs/libh5test.a
+FSEARCH_DIRS =@F9XMODFLAG@../src @FSEARCH_DIRS@
 
 ## These tests are parallel
 RUNTEST=$(RUNPARALLEL)
