Purpose: bug fix
Description:
calling h5diff from the h5repack test script running mpicc , the path of one of the files was not found

Solution:
inserted the full path in the script

Platforms tested:
linux (with mpicc and gcc)

Misc. update:

--- a/tools/h5repack/h5repack.sh.in
+++ b/tools/h5repack/h5repack.sh.in
@@ -93,7 +93,8 @@ TOOLTEST()
     TESTING $H5REPACK $@
 
     infile=$srcdir/../testfiles/$1
-    outfile=out.$1
+    path=`pwd`
+    outfile=$path/out.$1
     shift
     if [ "`uname -s`" = "TFLOPS O/S" ]; then
      $RUNSERIAL $H5REPACK_BIN -i $infile -o $outfile $@
